--- a/index.css
+++ b/index.css
@@ -1,3 +1,51 @@
-#heading {
-    color: red;
+.header {
+    display: flex;
+    justify-content: space-between;
+    border: 1px solid black;
+}
+.logo {
+    width: 100px;
+    margin: 20px;
+}
+
+
+.nav-items > ul {
+    display: flex;
+    list-style-type: none;
+    font-size: 24px;
+
+}
+
+.nav-items > ul > li {
+    margin: 10px;
+    padding: 10px;
+    
+}
+.filter-btn {
+    padding: 10px;
+    margin: 10px;
+    cursor: pointer;
+
+}
+
+.res-card {
+    width: 200px;
+    background-color: blanchedalmond;
+    padding: 5px;
+    margin: 5px;
+
+}
+.res-card:hover {
+    border: 1px solid green;
+    cursor: pointer;
+}
+
+.res-logo {
+    width: 100%;
+    height: 200px;
+
+}
+.res-container {
+    display: flex;
+    flex-wrap: wrap;
 }
