--- a/index.css
+++ b/index.css
@@ -49,3 +49,14 @@
     display: flex;
     flex-wrap: wrap;
 }
+
+.shimmer-container {
+    display: flex;
+    flex-wrap: wrap;
+}
+.shimmer-card {
+    width:200px;
+    height: 300px;
+    margin:20px;
+    background-color: blanchedalmond;
+}
