--- a/index.css
+++ b/index.css
@@ -60,3 +60,22 @@
     margin:20px;
     background-color: blanchedalmond;
 }
+
+.login-btn {
+    height: 50px;
+    width: 100px;
+    margin: 5px;
+    padding: 0 10px;
+    font-size: 24px;
+    cursor: pointer;
+}
+
+.filter {
+    display: flex;
+}
+
+.search-btn {
+    cursor: pointer;
+    margin: 10px;
+    padding: 10px;
+}
